--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="style.css" rel="stylesheet"/>
   </head>
   <body>
-    <div id="input" class="divider">
+    <div id="input" class="divider hidden">
       <div>what do you want to track</div>
       <div class="set">
         <label>label</label>
@@ -23,9 +23,14 @@
       </div>
       <button id="submit">add</button>
     </div>
-    <div id="character" class="divider">
+    <div id="character" class="divider hidden">
       <div id="output"></div>
       <button id="save">save</button>
+    </div>
+    <div id="overlay" class="hidden">
+      <p>Would you like to use the wizard to help you get started?</p>
+      <button id="yes">yes</button>
+      <button id="no">no</button>
     </div>
     <script src="script.js"></script>
   </body>
