wizard launches now, but that is all. Lots of work to do to hit the final goal might need to write most of the rendering code

--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
       <button id="save">save</button>
     </div>
     <div id="overlay" class="hidden">
-      <p>Would you like to use the wizard to help you get started?</p>
-      <button id="yes">yes</button>
-      <button id="no">no</button>
+      <div id="firstprompt">
+        <p>Would you like to use the wizard to help you get started?</p>
+        <button id="yes">yes</button>
+        <button id="no">no</button>
+      </div>
     </div>
     <script src="script.js"></script>
   </body>
