--- a/index.html
+++ b/index.html
@@ -5,35 +5,12 @@
     <link href="style.css" rel="stylesheet"/>
   </head>
   <body>
-    <div id="input" class="divider hidden">
-      <div>what do you want to track</div>
-      <div class="set">
-        <label>label</label>
-        <input id="key"/>
-      </div>
-      <div class="set">
-        <label>value</label>
-        <input id="value"/>
-        <div id="radio">
-          <p>what type of field is this</p>
-          <input type="radio" name="type" value="number" checked="true" class="number"/>Number
-          <input type="radio" name="type" value="text" class="text"/>Text
-          <input type="radio" name="type" value="textarea" class="textarea"/>Long Text
-        </div>
-      </div>
-      <button id="submit">add</button>
-    </div>
+    <div id="input" class="divider hidden"></div>
     <div id="character" class="divider hidden">
       <div id="output"></div>
       <button id="save">save</button>
     </div>
-    <div id="overlay" class="hidden">
-      <div id="firstprompt">
-        <p>Would you like to use the wizard to help you get started?</p>
-        <button id="yes">yes</button>
-        <button id="no">no</button>
-      </div>
-    </div>
+    <div id="output"></div>
     <script src="script.js"></script>
   </body>
 </html>
