--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
   </head>
   <body>
     <div id="input" class="divider hidden"></div>
-    <div id="character" class="divider hidden">
-      <div id="output"></div>
-      <button id="save">save</button>
+    <div id="output">
+      <div id="character"></div>
+      <div id="weapon"></div>
     </div>
-    <div id="output"></div>
     <script src="script.js"></script>
   </body>
 </html>
