its starting to be functional again which is nice

--- a/index.html
+++ b/index.html
@@ -1,15 +1,1 @@
-
-<html>
-  <head>
-    <title>my site</title>
-    <link href="style.css" rel="stylesheet"/>
-  </head>
-  <body>
-    <div id="input" class="divider hidden"></div>
-    <div id="output">
-      <div id="character"></div>
-      <div id="weapon"></div>
-    </div>
-    <script src="script.js"></script>
-  </body>
-</html>
+<html><head><title>my site</title><link href="style.css" rel="stylesheet"/></head><body><div id="output" class="half"><div id="character-container"><h2>Character</h2><div id="character"></div></div><div id="weapon-container"><h2>Weapons</h2><div id="weapon"></div></div><div id="magic-container"><h2>Magic</h2><div id="magic"></div></div></div><div id="input" class="half"><button>new weapon</button><button>new magic</button><div id="weapon-creator" class="hidden"><div class="set"><label>Title</label><input class="title"/></div><div class="set"><label>Damage</label><input class="damage"/></div><div class="set"><label>Defense</label><input class="defense"/></div><div class="set"><label>Agility</label><input class="agility"/></div><button id="create-weapon">create</button></div><div id="magic-creator" class="hidden"><div class="set"><label>Title</label><input class="title"/></div><div class="set"><label>Self Damage</label><input class="selfdamage"/></div><button id="create-magic">create</button></div></div><script src="script.js"></script></body></html>
